fix issue with line-height for page title and vertical align

--- a/src/pages/Office/ServicesCounselingMoveDetails/ServicesCounselingMoveDetails.module.scss
+++ b/src/pages/Office/ServicesCounselingMoveDetails/ServicesCounselingMoveDetails.module.scss
@@ -6,10 +6,14 @@
   .pageHeader {
     @include u-margin-bottom(4);
 
-    h1 {
-      // overriding the h1 defaults
-      @include u-margin-bottom(0);
-      line-height: 0;
+    .pageTitle {
+      display: flex;
+
+      h1 {
+        // overriding the h1 defaults
+        @include u-margin-bottom(0);
+        align-self: center;
+      }
     }
   }
 
